Fixed the paypal link

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -76,7 +76,7 @@
                 <li><a href="http://twitter.com/Eramdam">@Eramdam on Twitter</a></li>
             </ul>
             <p>Making Better TweetDeck is taking me a lot of time, even if I do this for free, you can help me by making a donation, thanks again!</p>
-            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="paypal btn btn-success btn-block btn-lg"><img src="img/paypal.png" /> Donate on PayPal</a></p>
+            <p class="donate"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="paypal btn btn-success"><img src="img/paypal.png" /> Donate on PayPal</a></p>
         </div>
         <div class="hidden-welcome fr">
             <p>Merci d'utiliser Better TweetDeck !<br /> Vous pouvez consulter le code source de l'extension, me suivre sur Twitter ! Merci beaucoup !</p>
@@ -85,7 +85,7 @@
                 <li><a href="http://twitter.com/Eramdam">@Eramdam sur Twitter</a></li>
             </ul>
             <p>Développer Better TweetDeck prend du temps, si vous l'appréciez, prenez le temps de faire un don, j'en serais très reconnaissant ! Merci beaucoup ! <img src="chrome-extension://jpabmnokplnmbpakpmcjabodgpfcknlg/emoji-pngs/emojis-inline/t-1f618.png" class="twitter-emoji"></p>
-            <p class="donate"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="paypal btn btn-success btn-block btn-lg"><img src="img/paypal.png" /> Donner sur PayPal</a></p>
+            <p class="donate"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="paypal btn btn-success"><img src="img/paypal.png" /> Donner sur PayPal</a></p>
         </div>
         <div id="sidebar" class="fancy">
             <img id="icon" src="" alt=""><h1 id="settings-label"></h1>
