Fixing the p.emoji bug #dang

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -36,6 +36,7 @@
         <li><strong>Features</strong>:
 
         <ul>
+        <li>You can now share any webpage or link on TweetDeck in a single (right) click on it!</li>
         <li>A button to the Settings page has been added below the Collapse button in TweetDeck</li>
         <li>TED videos are now supported</li>
         <li>A preview of display settings is now available in Settings page</li>
@@ -44,6 +45,7 @@
         <li><strong>Bugfixes &amp; Improvements</strong>:
 
         <ul>
+        <li>Some performance improvements</li>
         <li>The extension doesn't need all the permissions anymore</li>
         <li>The Settings page has been improved</li>
         </ul></li>
@@ -56,6 +58,7 @@
         <li><strong>Fonctionnalités</strong>:
 
         <ul>
+        <li>Vous pouvez désormais partager n'importe quelle page ou lien d'un simple clic droit !</li>
         <li>Ajout d'un bouton menant aux réglages de Better TweetDeck à côté du bouton "Collapse" dans la barre latérale de TweetDeck</li>
         <li>Ajout du support des vidéos de TED.com</li>
         <li>Un aperçu des options d'affichage est disponible dans les options</li>
