--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -87,7 +87,7 @@
                 <li><a href="http://github.com/eramdam/BetterTweetDeck">BetterTweetDeck sur GitHub</a></li>
                 <li><a href="http://twitter.com/Eramdam">@Eramdam sur Twitter</a></li>
             </ul>
-            <p>Développer Better TweetDeck prend du temps, si vous l'appréciez, prenez le temps de faire un don, j'en serais très reconnaissant ! Merci beaucoup ! <img src="chrome-extension://jpabmnokplnmbpakpmcjabodgpfcknlg/emoji-pngs/emojis-inline/t-1f618.png" class="twitter-emoji"></p>
+            <p>Développer Better TweetDeck prend du temps, si vous l'appréciez, prenez le temps de faire un don, j'en serais très reconnaissant ! Merci beaucoup ! <img src="https://tweetdeck.twitter.com/web/assets/emoji/dark/1f618.png" class="twitter-emoji"></p>
             <p class="donate"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=RRY2KKZLNBJDG" class="paypal btn btn-success"><img src="img/paypal.png" /> Donner sur PayPal</a></p>
         </div>
         <div id="sidebar" class="fancy">
