[Meta] Updated default option and changelolg

--- a/source/fancy-settings/source/index.html
+++ b/source/fancy-settings/source/index.html
@@ -31,44 +31,23 @@
     <body class="no-select">
         <div class="hidden-changelog en">
         <p>You updated Better TweetDeck to the <b></b> version! Look down to see new features!</p>
-        <b>Changelog for <u>1.6.x</u></b>:
+        <b>Changelog for <u>1.7.x</u></b>:
         <ul>
         <li><strong>Features</strong>:
 
         <ul>
-        <li>You can now share any webpage or link on TweetDeck in a single (right) click on it!</li>
-        <li>A button to the Settings page has been added below the Collapse button in TweetDeck</li>
-        <li>TED videos are now supported</li>
-        <li>A preview of display settings is now available in Settings page</li>
-        <li>What if you tried the Konami Code... ?</li>
-        </ul></li>
-        <li><strong>Bugfixes &amp; Improvements</strong>:
-
-        <ul>
-        <li>Some performance improvements</li>
-        <li>The extension doesn't need all the permissions anymore</li>
-        <li>The Settings page has been improved</li>
+        <li>You can now get a "flashing" effect on new tweets that appear on your TweetDeck app.</li>
         </ul></li>
         </ul>
         </div>
         <div class="hidden-changelog fr">
         <p>Better TweetDeck a été mis à jour en version <b></b> ! Voici les changements apportés !</p>
-        <b>Liste de changement pour les versions <u>1.6.0 et plus</u></b>:
+        <b>Liste de changement pour les versions <u>1.7.0 et plus</u></b>:
         <ul>
         <li><strong>Fonctionnalités</strong>:
 
         <ul>
-        <li>Vous pouvez désormais partager n'importe quelle page ou lien d'un simple clic droit !</li>
-        <li>Ajout d'un bouton menant aux réglages de Better TweetDeck à côté du bouton "Collapse" dans la barre latérale de TweetDeck</li>
-        <li>Ajout du support des vidéos de TED.com</li>
-        <li>Un aperçu des options d'affichage est disponible dans les options</li>
-        <li>Et si vous essayiez le Konami Code ... ? </li>
-        </ul></li>
-        <li><strong>Correction de bugs &amp; améliorations</strong>:
-
-        <ul>
-        <li>L'extension n'a plus besoin de toutes les autorisations</li>
-        <li>La page des options a été améliorée</li>
+        <li>Vous pouvez maintenant faire "clignoter" légèrement les tweets qui arrivent.</li>
         </ul></li>
         </ul>
         </div>
