Added user-agent string and locales in options

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -11,7 +11,6 @@
 <body class="chrome-bootstrap">
   <div class="frame">
     <div class="navigation">
-      <h1><a href="#">Settings</a></h1>
       <ul class="menu">
         <li class="selected"><a href="#general"><span class="i18n" data-message="OptsTweets"></span></a></li>
         <li class=""><a href="#apparence"><span class="i18n" data-message="OptsAppearance"></span></a></li>
@@ -19,10 +18,10 @@
       </ul>
       <ul class="menu">
         <li class="">
-           <a href="#credits">Credits</a>
+           <a href="#credits"><span class="i18n" data-message="OptsCredits"></span></a>
         </li>
         <li class="">
-           <a href="#about">About</a>
+           <a href="#about"><span class="i18n" data-message="OptsAbout"></span></a>
         </li>
       </ul>
     </div>
@@ -189,35 +188,36 @@
         </div>
       </div>
       <div id="about">
-        <header><h1>About</h1></header>
+        <header><h1><span class="i18n" data-message="OptsAbout"></span></h1></header>
         <div class="content">
           <section>
-            <h3>Informations</h3>
+            <h3><span class="i18n" data-message="Infos"></span></h3>
             <p>Version: <span class="version-number"></span></p>
+            <p>User-Agent: <span class="user-agent"></span></p>
           </section>
           <section>
-            <h3>Links</h3>
-            <p><a href="https://chrome.google.com/webstore/detail/bettertweetdeck/micblkellenpbfapmcpcfhcoeohhnpob">Better TweetDeck on the Chrome Web Store</a></p>
-            <p><a href="https://github.com/eramdam/BetterTweetDeck/issues">Bugs or suggestions</a></p>
-            <p><a href="https://github.com/eramdam/BetterTweetDeck">GitHub page</a></p>
-            <p><a href="http://erambert.me/en">Author's website</a></p>
+            <h3><span class="i18n" data-message="Links"></span></h3>
+            <p><a href="https://chrome.google.com/webstore/detail/bettertweetdeck/micblkellenpbfapmcpcfhcoeohhnpob"><span class="i18n" data-message="BTDWebStore"></span></a></p>
+            <p><a href="https://github.com/eramdam/BetterTweetDeck/issues"><span class="i18n" data-message="BugsSugs"></span></a></p>
+            <p><a href="https://github.com/eramdam/BetterTweetDeck">GitHub</a></p>
+            <p><a href="http://erambert.me/en"><span class="i18n" data-message="AuthorWeb"></span></a></p>
           </section>
         </div>
       </div>
       <div id="credits">
-        <header><h1>Credits</h1></header>
+        <header><h1><span class="i18n" data-message="OptsCredits"></span></h1></header>
         <div class="content">
           <section>
-            <h3>Author</h3>
+            <h3><span class="i18n" data-message="Author"></span></h3>
             <p>Damien Erambert</p>
           </section>
           <section>
-            <h3>Contributors / Early-testers</h3>
+            <h3><span class="i18n" data-message="Contributors"></span></h3>
             <p>Kmeuh</p>
             <p>Kur0igetsu</p>
           </section>
           <section>
-            <h3>Used ressources</h3>
+            <h3><span class="i18n" data-message="Ressources"></span></h3>
             <p><a href="https://github.com/roykolak/chrome-bootstrap">Chrome Bootstrap</a></p>
             <p><a href="http://zeptojs.com/">Zepto</a></p>
             <p><a href="http://noembed.com/">Noembed</a></p>
