Added a nice header in options page

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -11,6 +11,9 @@
 <body class="chrome-bootstrap">
   <div class="frame">
     <div class="navigation">
+      <h1>
+        <a href=""><span class="i18n" data-message="Settings"></span></a>
+      </h1>
       <ul class="menu">
         <li class="selected"><a href="#general"><span class="i18n" data-message="OptsTweets"></span></a></li>
         <li class=""><a href="#apparence"><span class="i18n" data-message="OptsAppearance"></span></a></li>
