Re-added tweetPreview in options page

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -104,6 +104,9 @@
               </section>
             </section>
             <h2><span class="i18n" data-message="preview"></span></h2>
+            <section>
+              <div class="tweet-preview"><div class="picture true"></div> <div class="name both"></div> <div class="timestamp relative"></div></div>
+            </section>
         </div>
       </div>
       <div id="apparence">
