Moved options preview images and added a new preview for Appearance options

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -153,6 +153,19 @@
             </div>
           </section>
           <h2><span class="i18n" data-message="preview"></span></h2>
+          <section>
+              <div id="content_preview" class="">
+                <div id="bg_compose">
+                  <div id="compose_icons"></div>
+                </div>
+                <div id="bg_column">
+                  <div id="avatars"></div>
+                  <div id="notif_icon"></div>
+                  <div id="no_icons_col"></div>
+                  <div id="yt_button"></div>
+                </div>
+              </div>
+          </section>
         </div>
       </div>
       <div id="contenu" class="">
