Much contributors, such open source

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -232,6 +232,9 @@
           </section>
           <section>
             <h3><span class="i18n" data-message="Contributors"></span></h3>
+            <p><a href="https://github.com/outadoc">outadoc</a></p>
+            <p><a href="https://github.com/Meroje">Meroje</a></p>
+            <p><a href="https://github.com/cpasmoi">cpasmoi</a></p>
             <p>Kmeuh</p>
             <p>Kur0igetsu</p>
           </section>
