--- a/source/options/options.html
+++ b/source/options/options.html
@@ -20,12 +20,9 @@
         <li class=""><a href="#contenu"><span class="i18n" data-message="OptsContent"></span></a></li>
       </ul>
       <ul class="menu">
-        <li class="">
-           <a href="#credits"><span class="i18n" data-message="OptsCredits"></span></a>
-        </li>
-        <li class="">
-           <a href="#about"><span class="i18n" data-message="OptsAbout"></span></a>
-        </li>
+        <li class=""><a href="#credits"><span class="i18n" data-message="OptsCredits"></span></a></li>
+        <li class=""><a href="#about"><span class="i18n" data-message="OptsAbout"></span></a></li>
+        <li class=""><a href="#changelog"><span class="i18n" data-message="OptsChangelog"></span></a></li>
       </ul>
     </div>
     <div class="mainview view">
@@ -244,6 +241,259 @@
             <p><a href="http://zeptojs.com/">Zepto</a></p>
             <p><a href="http://noembed.com/">Noembed</a></p>
           </section>
+        </div>
+      </div>
+      <div id="changelog">
+        <header><h1><span class="i18n" data-message="OptsChangelog"></span></h1></header>
+        <div class="content">
+          <section lang="fr">
+            <h3 id="2-0-0">2.0.0</h3>
+            <ul>
+                <li>Une nouvelle version complètement ré-écrite ! <em><a href="https://www.youtube.com/watch?v=gAjR4_CbPpQ">Harder, Better, Faster, Stronger</a>!</em>
+                </li>
+                <li>Une nouvelle page d'options plus agréable et facile à utiliser !</li>
+                <li>Une tonne d'optimisations, de corrections de bugs et d'améliorations de performances !</li>
+            </ul>
+
+            <h3 id="1-6-5">1.6.5</h3>
+            <ul>
+                <li>Ajout des vidéos TED</li>
+                <li>Bouton "Réglages"</li>
+                <li>Partage avec menu contextuel</li>
+                <li>All hail Konami</li>
+            </ul>
+            <h3 id="1-5-1">1.5.1</h3>
+            <ul>
+                <li>L'extension n'a plus besoin de toutes les permissions</li>
+                <li>Amélioration du mode minimaliste</li>
+                <li>Les URLs dans les profils sont corrigées</li>
+            </ul>
+            <h3 id="1-5-0">1.5.0</h3>
+            <ul>
+                <li>Mode minimaliste !</li>
+                <li>BEAUCOUP d'améliorations et de ré-écriture du code</li>
+                <li>Certains "bugs" ennuyeux ont été démolis, youhou !</li>
+            </ul>
+            <h3 id="1-4-5">1.4.5</h3>
+            <ul>
+                <li>Vous pouvez maintenant ajouter facilement des emojis avec le bouton "Emoji"</li>
+                <li>Les miniatures devraient charger plus vite.</li>
+                <li>Les miniatures pour à peu près n'importe quel lien d'image sont supportées !</li>
+                <li>Les miniatures de Dropbox sont supportées !</li>
+                <li>Les emojis sont (presque) tous supportés et devraient charger plus vite.</li>
+                <li>Améliorations et corrections de bugs mineurs</li>
+            </ul>
+            <h3 id="1-4-0">1.4.0</h3>
+            <ul>
+                <li>Emojis sont désormais supportés !</li>
+                <li>Soundcloud et Bandcamp sont supportés !</li>
+            </ul>
+            <h3 id="1-3-3">1.3.3</h3>
+            <ul>
+                <li>Les boutons d'actions sur les aperçus plein écran fonctionnent comme ceux de TweetDeck !</li>
+            </ul>
+            <h3 id="1-3-2">1.3.2</h3>
+            <ul>
+                <li>Amélioration de la récupération des miniatures Instagram</li>
+            </ul>
+            <h3 id="1-3-1">1.3.1</h3>
+            <ul>
+                <li>Les aperçus de Better TweetDeck peuvent être fermés avec la touche Echap</li>
+            </ul>
+            <h3 id="1-3-0">1.3.0</h3>
+            <ul>
+                <li>
+                    <p>Fonctionnalités:</p>
+                    <ul>
+                        <li>La page de réglages a été ré-arrangée</li>
+                        <li>L'extension est maintenant traduite en français !</li>
+                        <li>Le support de Dribbble, DeviantArt, Moby.to et yFrog a été ajouté pour les miniatures et aperçus</li>
+                        <li>Les aperçus en plein écran et les fenêtres modales peuvent bénéficier d'un nouvel effet "plein écran"</li>
+                    </ul>
+                </li>
+                <li>
+                    <p>Correction de bugs &amp; améliorations:</p>
+                    <ul>
+                        <li>Les aperçus plein écran peuvent être fermés avec la touche Échap</li>
+                        <li>Correction d'un problème avec le HTTPS sur les vidéos Dailymotion</li>
+                        <li>Correction d'un problème de duplication de miniatures avec YouTube + Instagram</li>
+                        <li>Les miniatures Tumblr devraient être plus précisément choisies</li>
+                        <li>Suppression des miniatures sur les vues détaillées des tweets</li>
+                        <li>Améliorations des performances et corrections de bug mineurs</li>
+                    </ul>
+                </li>
+            </ul>
+          </section>
+          <section lang="en">
+            <h3 id="2-0-0">2.0.0</h3>
+            <ul>
+                <li>A new version completely re-written! <a href="https://www.youtube.com/watch?v=gAjR4_CbPpQ">Harder, Better, Faster, Stronger</a>!</li>
+                <li>A new nicer and eaiser to use Options page</li>
+                <li>Tons of optimizations, bug fixes and improvements for an even better experience!</li>
+            </ul>
+            <h3 id="1-6-5">1.6.5</h3>
+            <ul>
+                <li>Re-added emojis as TweetDeck "fixed" their XSS flaws but didn't add emojis back</li>
+            </ul>
+            <h3 id="1-6-2">1.6.2</h3>
+            <ul>
+                <li>Removed emojis to let the TweetDeck ones</li>
+            </ul>
+            <h3 id="1-6-0">1.6.0</h3>
+            <ul>
+                <li>A share button</li>
+                <li>A button to access the settings</li>
+                <li>A preview of the tweet display settings</li>
+                <li>TED talks support</li>
+                <li>Konami stuff</li>
+            </ul>
+            <h3 id="1-5-1">1.5.1</h3>
+            <ul>
+                <li>No more using &lt;all_urls&gt;</li>
+                <li>Improvements for the Minimal mode</li>
+                <li>Fixed URLs in profiles</li>
+            </ul>
+            <h3 id="1-5-0">1.5.0</h3>
+            <ul>
+                <li>Minimal mode!</li>
+                <li>A LOT of things got improved in the way they're coded</li>
+                <li>Some annoying "bugs" were crushed, yay!</li>
+            </ul>
+            <h3 id="1-4-8">1.4.8</h3>
+            <ul>
+                <li>A lot of functions has been rewritten for better performances</li>
+                <li>Rounded avatars work with the smaller size recently introduced in TweetDeck</li>
+                <li>Some aesthetic detzials has been improved</li>
+            </ul>
+            <h3 id="1-4-5">1.4.5</h3>
+            <ul>
+                <li>You can now add emojis easily in your tweets thank to the "Emojis" button in the Compose panel!</li>
+                <li>Thumbnails should be lighter to load.</li>
+                <li>Thumbnails for any images are now supported!</li>
+                <li>Thumbnails from Dropbox are now supported!</li>
+                <li>Emojis are now all supported (almost?) perfectly and should be faster to load</li>
+                <li>Minors improvements and bugfixes</li>
+            </ul>
+            <h3 id="1-4-0">1.4.0</h3>
+            <ul>
+                <li>Emojis are now supported!</li>
+                <li>Soundcloud and Bandcamp are supported in thumbnails</li>
+            </ul>
+            <h3 id="1-3-3">1.3.3</h3>
+            <ul>
+                <li>The tweet-action links in BTD's lightboxes work like the default ones</li>
+            </ul>
+            <h3 id="1-3-2">1.3.2</h3>
+            <ul>
+                <li>Added a 404 check for Instagram links</li>
+            </ul>
+            <h3 id="1-3-1">1.3.1</h3>
+            <ul>
+                <li>BTD's lightboxes can be closed with Escape key</li>
+            </ul>
+            <h3 id="1-3-0">1.3.0</h3>
+            <p>Features:</p>
+            <ul>
+                <li>The Settings page has been restyled</li>
+                <li>The extension is now localized in French in addition to English</li>
+                <li>Added support of Dribbble, Moby.to, yFrog &amp; DeviantArt for thumbnails/lightboxes</li>
+                <li>Lightboxes and modal windows can get a new "full-screen" effect</li>
+                <li>Icons in compose panel can be smaller now</li>
+            </ul>
+            <p>Bugfixes &amp; Improvements:</p>
+            <ul>
+                <li>Fixed an issue with HTTPS and Dailymotion video embeds</li>
+                <li>Fixed a duplicating thumbnails issue when a YouTube link and an Instagram one were in the same tweet</li>
+                <li>Improved the Tumblr mechanism for thumbnails</li>
+                <li>Removed thumbnails on Details view</li>
+                <li>Stability and performance improvements as minor bugfixes as well</li>
+            </ul>
+            <h3 id="1-2-x">1.2.x</h3>
+            <ul>
+                <li>Thumbnails are back in profil modal windows. I might add an option for that.</li>
+                <li>Lightboxes support for all the thumbnails services</li>
+                <li>Vimeo, Dailymotion and full Instagram support added</li>
+                <li>Imgur thumbnails are now 100% accurate</li>
+                <li>The extension displays less useless errors in the console.</li>
+            </ul>
+            <h3 id="1-1-5">1.1.5</h3>
+            <ul>
+                <li>The extension fetches the user-size for thumbnails sooner, resulting in better working thumbnails</li>
+            </ul>
+            <h3 id="1-1-4">1.1.4</h3>
+            <ul>
+                <li>Fixed a "bug" where RT-boxes from TweetDeck are too wide</li>
+            </ul>
+            <h3 id="1-1-3">1.1.3</h3>
+            <ul>
+                <li>Now you can display only one thumbnail per tweet</li>
+            </ul>
+            <h3 id="1-1-1">1.1.1</h3>
+            <ul>
+                <li>Fixed the font-weight of usernames when using the "inverted" naming display (in Notifications columns)</li>
+            </ul>
+            <h3 id="1-1-0">1.1.0</h3>
+            <ul>
+                <li>Thumbnail size now can be controlled within columns' settings!</li>
+                <li>Image services are in alphabetical order in settings.</li>
+                <li>Large previews got a triangle like the Twitter's ones! #Illuminati</li>
+                <li>Fixed a bug with Imgur IDs that were wrongly parsed</li>
+                <li>Fixed <strong>for real</strong> the issue with "inverted" name displaying. Phew.</li>
+            </ul>
+            <h3 id="1-0-6">1.0.6</h3>
+            <ul>
+                <li>Fixed a weird bug with the "inverted" name display mode</li>
+            </ul>
+            <h3 id="1-0-5">1.0.5</h3>
+            <ul>
+                <li>Fixed a bug where imgur.com/gallery/ links where mistakenly considered as album</li>
+            </ul>
+            <h3 id="1-0-4">1.0.4</h3>
+            <ul>
+                <li>Fixed a bug where suffixes were mixed between providers, resulting in failed thumbnails</li>
+            </ul>
+            <p>1.0.3 ===============+ Fixed a bug where URL could get "lost" between AJAX calls, resulting in failed links</p>
+            <h3 id="1-0-2">1.0.2</h3>
+            <ul>
+                <li>Large previews now fit perfectly with the Twitter ones</li>
+                <li>Added a "Welcome" screen</li>
+                <li>Re-ordered options</li>
+                <li>Improved options page, now displaying it at each update with a changelog</li>
+                <li>Added Tumblr support for previews</li>
+                <li>Added CloudApp support for previews</li>
+                <li>Added 500px support for previews</li>
+                <li>Added Flickr support for previews</li>
+                <li>Added Instagram support for previews</li>
+                <li>Added full Imgur support for previews</li>
+                <li>Added the possibility of choosing the services to display or not</li>
+                <li>Added possibility not to hide the play button on YouTube thumbnails</li>
+            </ul>
+            <h3 id="0-0-8">0.0.8</h3>
+            <ul>
+                <li>Added an option to display the full-time only after 24h</li>
+                <li>Removed a debug message which was still in the code (woops!)</li>
+                <li>Added an option to affect the <a href="http://f.cl.ly/items/0Q0I1t2k441639363V35/BehaYurCUAATDU8.png">mention helper</a> only in name displaying</li>
+                <li>Re-ordered the options to have something nicer</li>
+            </ul>
+
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="overlay" style="display: none;">
+    <div class="page">
+      <h1><span class="i18n" data-message="onInstallH1"></span></h1>
+      <div class="close-button"></div>
+      <div class="content-area">
+        <p><span class="i18n" data-message="onInstallP1"></span></p>
+        <p><span class="i18n" data-message="onInstallP2"></span></p>
+      </div>
+      <div class="action-area">
+        <div class="action-area-right">
+          <div class="button-strip">
+            <button>OK</button>
+          </div>
         </div>
       </div>
     </div>
