Added option for flash_tweets

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -179,6 +179,27 @@
                 </label>
               </div>
             </section>
+            <label class="option-label"><span class="i18n" data-message="FlashTweets"></span></label>
+            <section>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="flash_tweets" value="mentions">
+                  <span><span class="i18n" data-message="FlashTweetsMentions"></span></span>
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="flash_tweets" value="all">
+                  <span><span class="i18n" data-message="FlashTweetsAll"></span></span>
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="flash_tweets" value="false">
+                  <span><span class="i18n" data-message="FlashTweetsFalse"></span></span>
+                </label>
+              </div>
+            </section>
             <label class="option-label"><span class="i18n" data-message="thumbnailsfrom"></span></label>
             <section>
               <div class="checkbox"><label><input type="checkbox" name="provide_500px"><img src="http://g.etfv.co/http://500px.com" /><span>500px <em>500px.com/photo/12345678/awesome-picture</em> </span></label></div>
