--- a/source/options/options.html
+++ b/source/options/options.html
@@ -272,6 +272,7 @@
             <ul>
                 <li>Une nouvelle version complètement ré-écrite ! <em><a href="https://www.youtube.com/watch?v=gAjR4_CbPpQ">Harder, Better, Faster, Stronger</a>!</em>
                 </li>
+                <li>Vous pouvez désormais faire "clignoter" les nouveaux tweets (onglet <a href="#contenu">Contenu</a>)</li>
                 <li>Une nouvelle page d'options plus agréable et facile à utiliser !</li>
                 <li>Une tonne d'optimisations, de corrections de bugs et d'améliorations de performances !</li>
             </ul>
@@ -349,6 +350,7 @@
             <h3 id="2-0-0">2.0.0</h3>
             <ul>
                 <li>A new version completely re-written! <a href="https://www.youtube.com/watch?v=gAjR4_CbPpQ">Harder, Better, Faster, Stronger</a>!</li>
+                <li>You can now make new tweets "flash" (<a href="#contenu">Content</a> tab)</li>
                 <li>A new nicer and eaiser to use Options page</li>
                 <li>Tons of optimizations, bug fixes and improvements for an even better experience!</li>
             </ul>
