Added option to shorten text or not on sharing action

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -168,6 +168,12 @@
             <section>
               <div class="checkbox">
                 <label>
+                  <input type="checkbox" name="shorten_text">
+                  <span><span class="i18n" data-message="shortText"></span> <span class="i18n greyed" data-message="RestartChrome"></span></span>
+                </label>
+              </div>
+              <div class="checkbox">
+                <label>
                   <input type="checkbox" name="url_redirection">
                   <span><span class="i18n" data-message="tcoRemoval"></span></span>
                 </label>
@@ -268,6 +274,11 @@
         <header><h1><span class="i18n" data-message="OptsChangelog"></span></h1></header>
         <div class="content">
           <section lang="fr">
+            <h3 id="2-0-2">2.0.2</h3>
+            <ul>
+                <li>Ajout: Vous pouvez désormais choisir de ne pas raccourcir le texte sélectionné lors du partage par menu contextuel</li>
+                <li>Correction: les aperçu pleins écran sont correctement redimensionnés en fonction de la taille du tweet associé</li>
+            </ul>
             <h3 id="2-0-0">2.0.0</h3>
             <ul>
                 <li>Une nouvelle version complètement ré-écrite ! <em><a href="https://www.youtube.com/watch?v=gAjR4_CbPpQ">Harder, Better, Faster, Stronger</a>!</em>
@@ -347,6 +358,11 @@
             </ul>
           </section>
           <section lang="en">
+            <h3 id="2-0-2">2.0.2</h3>
+            <ul>
+                <li>Add: You can now choose not to shorten selected text on "Share on (Better) TweetDeck" action</li>
+                <li>Fix: Fullscreen previews are now correctly sized</li>
+            </ul>
             <h3 id="2-0-0">2.0.0</h3>
             <ul>
                 <li>A new version completely re-written! <a href="https://www.youtube.com/watch?v=gAjR4_CbPpQ">Harder, Better, Faster, Stronger</a>!</li>
