Updated messages to be more obvious about the compatibility of the extension..

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -527,6 +527,7 @@
       <div class="content-area">
         <p><span class="i18n" data-message="onInstallP1"></span></p>
         <p><span class="i18n" data-message="onInstallP2"></span></p>
+        <p><span class="i18n" data-message="onInstallP3"></span></p>
       </div>
       <div class="action-area">
         <div class="action-area-right">
