Added @mkzero as a contributor in Credits page

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -256,6 +256,7 @@
           </section>
           <section>
             <h3><span class="i18n" data-message="Contributors"></span></h3>
+            <p><a href="https://github.com/mkzero">mkzero (German translation)</a></p>
             <p><a href="https://github.com/outadoc">outadoc</a></p>
             <p><a href="https://github.com/Meroje">Meroje</a></p>
             <p><a href="https://github.com/cpasmoi">cpasmoi</a></p>
