Removed favicons for now

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -208,24 +208,24 @@
             </section>
             <label class="option-label"><span class="i18n" data-message="thumbnailsfrom"></span></label>
             <section>
-              <div class="checkbox"><label><input type="checkbox" name="provide_500px"><img src="http://g.etfv.co/http://500px.com" /><span>500px <em>500px.com/photo/12345678/awesome-picture</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_bandcamp"><img src="http://g.etfv.co/http://bandcamp.com" /><span>Bandcamp <em>*.bandcamp.com/track, *.bandcamp.com/album</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_cloudapp"><img src="http://g.etfv.co/http://www.getcloudapp.com/" /><span>CloudApp <em>cl.ly/image/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_dailymotion"><img src="http://g.etfv.co/http://www.dailymotion.com" /><span>Dailymotion <em>dailymotion.com/video/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_deviantart"><img src="http://i.deviantart.net/icons/favicon.ico" /><span>DeviantArt <em>*.deviantart.com/art, fav.me/*, sta.sh</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_dribbble"><img src="https://d13yacurqjgara.cloudfront.net/assets/favicon-e077da1e1160970a2edcc05e6e7dc20b.ico" /><span>Dribbble <em>https://dribbble.com/shots/*, drbl.in/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_droplr"><img src="http://g.etfv.co/https://www.droplr.com/" /><span>Droplr <em>d.pr/i/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_flickr"><img src="http://g.etfv.co/http://flickr.com" /><span>Flickr <em>https://www.flickr.com/photos/*/*/</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_imgly"><img src="http://g.etfv.co/http://img.ly" /><span>img.ly <em>img.ly/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_imgur"><img src="http://g.etfv.co/http://imgur.com" /><span>Imgur <em>imgur.com/*, imgur.com/a/*, imgur.com/gallery/*, i.imgur.com/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_instagram"><img src="http://g.etfv.co/http://instagram.com" /><span>Instagram <em>instagram.com/p/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_mobyto"><img src="http://g.etfv.co/http://mobypicture.com" /><span>mobypicture <em>moby.to/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_soundcloud"><img src="http://g.etfv.co/http://soundcloud.com" /><span>SoundCloud <em>soundcloud.com/user/track</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_ted"><img src="http://g.etfv.co/http://ted.com" /><span>TED <em>www.ted.com/talks/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_tumblr"><img src="http://g.etfv.co/http://tumblr.com" /><span>Tumblr <em>*.tumblr.com/*.(jpeg|png|gif)</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_vimeo"><img src="http://g.etfv.co/http://vimeo.com" /><span>Vimeo <em>vimeo.com/*</em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_yfrog"><img src="http://g.etfv.co/http://yfrog.com" /><span>yfrog <em></em> </span></label></div>
-              <div class="checkbox"><label><input type="checkbox" name="provide_toresize"><img src="http://g.etfv.co/http://null?defaulticon=bluepng" /><span>Universel <em>url.com/to/image.(jpeg|png|gif)</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_500px"><span>500px <em>500px.com/photo/12345678/awesome-picture</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_bandcamp"><span>Bandcamp <em>*.bandcamp.com/track, *.bandcamp.com/album</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_cloudapp"><span>CloudApp <em>cl.ly/image/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_dailymotion"><span>Dailymotion <em>dailymotion.com/video/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_deviantart"><span>DeviantArt <em>*.deviantart.com/art, fav.me/*, sta.sh</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_dribbble"><span>Dribbble <em>https://dribbble.com/shots/*, drbl.in/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_droplr"><span>Droplr <em>d.pr/i/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_flickr"><span>Flickr <em>https://www.flickr.com/photos/*/*/</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_imgly"><span>img.ly <em>img.ly/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_imgur"><span>Imgur <em>imgur.com/*, imgur.com/a/*, imgur.com/gallery/*, i.imgur.com/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_instagram"><span>Instagram <em>instagram.com/p/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_mobyto"><span>mobypicture <em>moby.to/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_soundcloud"><span>SoundCloud <em>soundcloud.com/user/track</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_ted"><span>TED <em>www.ted.com/talks/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_tumblr"><span>Tumblr <em>*.tumblr.com/*.(jpeg|png|gif)</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_vimeo"><span>Vimeo <em>vimeo.com/*</em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_yfrog"><span>yfrog <em></em> </span></label></div>
+              <div class="checkbox"><label><input type="checkbox" name="provide_toresize"><span>Universel <em>url.com/to/image.(jpeg|png|gif)</em> </span></label></div>
             </section>
           </section>
         </div>
