updated changelog and stuff

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -244,6 +244,7 @@
             <p><a href="https://github.com/eramdam/BetterTweetDeck/issues"><span class="i18n" data-message="BugsSugs"></span></a></p>
             <p><a href="https://github.com/eramdam/BetterTweetDeck">GitHub</a></p>
             <p><a href="http://erambert.me/en"><span class="i18n" data-message="AuthorWeb"></span></a></p>
+            <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9TXC4TVXGL6PJ"><span class="i18n" data-message="MakeADonation"></span></a></p>
           </section>
         </div>
       </div>
@@ -252,7 +253,7 @@
         <div class="content">
           <section>
             <h3><span class="i18n" data-message="Author"></span></h3>
-            <p>Damien Erambert</p>
+            <p>Damien Erambert (<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9TXC4TVXGL6PJ"><span class="i18n" data-message="MakeADonation"></span></a>)</p>
           </section>
           <section>
             <h3><span class="i18n" data-message="Contributors"></span></h3>
@@ -275,6 +276,10 @@
         <header><h1><span class="i18n" data-message="OptsChangelog"></span></h1></header>
         <div class="content">
           <section lang="fr">
+            <h3 id="2-0-7">2.0.7</h3>
+            <ul>
+              <li>Correction de bugs liés à HTTPS</li>
+            </ul>
             <h3 id="2-0-2">2.0.2</h3>
             <ul>
                 <li>Ajout: Vous pouvez désormais choisir de ne pas raccourcir le texte sélectionné lors du partage par menu contextuel</li>
@@ -359,6 +364,10 @@
             </ul>
           </section>
           <section lang="en">
+            <h3 id="2-0-7">2.0.7</h3>
+            <ul>
+              <li>Bugfixes related to HTTPS</li>
+            </ul>
             <h3 id="2-0-2">2.0.2</h3>
             <ul>
                 <li>Add: You can now choose not to shorten selected text on "Share on (Better) TweetDeck" action</li>
