--- a/source/options/options.html
+++ b/source/options/options.html
@@ -276,7 +276,7 @@
         <header><h1><span class="i18n" data-message="OptsChangelog"></span></h1></header>
         <div class="content">
           <section lang="fr">
-            <h3 id="2-0-8">2.0.8</h3>
+            <h3 id="2-1-0">2.1.0</h3>
             <ul>
               <li>Correction de bugs liés à HTTPS</li>
             </ul>
@@ -364,7 +364,7 @@
             </ul>
           </section>
           <section lang="en">
-            <h3 id="2-0-8">2.0.8</h3>
+            <h3 id="2-1-0">2.1.0</h3>
             <ul>
               <li>Bugfixes related to HTTPS</li>
             </ul>
@@ -530,7 +530,7 @@
       </div>
     </div>
   </div>
-  <div class="overlay" style="display: none;">
+  <div class="overlay" id="installed">
     <div class="page">
       <h1><span class="i18n" data-message="onInstallH1"></span></h1>
       <div class="close-button"></div>
@@ -538,6 +538,24 @@
         <p><span class="i18n" data-message="onInstallP1"></span></p>
         <p><span class="i18n" data-message="onInstallP2"></span></p>
         <p><span class="i18n" data-message="onInstallP3"></span></p>
+      </div>
+      <div class="action-area">
+        <div class="action-area-right">
+          <div class="button-strip">
+            <button>OK</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="overlay" id="thanks">
+    <div class="page">
+      <h1><span class="i18n" data-message="onUpdateH1"></span></h1>
+      <div class="close-button"></div>
+      <div class="content-area">
+        <p><span class="i18n" data-message="onUpdateP1"></span></p>
+        <p><span class="i18n" data-message="onUpdateP2"></span></p>
+        <p><span class="i18n" data-message="onUpdateP3"></span></p>
       </div>
       <div class="action-area">
         <div class="action-area-right">
