Add the option to disable "Share on (Better) TweetDeck" button
Fixes #25
Also button message now localized

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -168,6 +168,12 @@
             <section>
               <div class="checkbox">
                 <label>
+                  <input type="checkbox" name="share_button">
+                  <span><span class="i18n" data-message="shareButton"></span></span>
+                </label>
+              </div>
+              <div class="checkbox">
+                <label>
                   <input type="checkbox" name="shorten_text">
                   <span><span class="i18n" data-message="shortText"></span> <span class="i18n greyed" data-message="RestartChrome"></span></span>
                 </label>
