Fixed addition of option for share button

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -169,7 +169,7 @@
               <div class="checkbox">
                 <label>
                   <input type="checkbox" name="share_button">
-                  <span><span class="i18n" data-message="shareButton"></span></span>
+                  <span><span class="i18n" data-message="shareButton"></span> <span class="i18n greyed" data-message="RestartChrome"></span></span>
                 </label>
               </div>
               <div class="checkbox">
