:ledger: add contributor

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -273,6 +273,7 @@
             <p><a href="https://github.com/outadoc">outadoc</a></p>
             <p><a href="https://github.com/Meroje">Meroje</a></p>
             <p><a href="https://github.com/cpasmoi">cpasmoi</a></p>
+            <p><a href="https://github.com/rodrigopolo">rodrigopolo</a></p>
             <p>Kmeuh</p>
             <p>Kur0igetsu</p>
           </section>
