:ledger: added twitter account and news about 3.0

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -253,10 +253,11 @@
           <section>
             <h3><span class="i18n" data-message="Links"></span></h3>
             <p><a href="https://chrome.google.com/webstore/detail/bettertweetdeck/micblkellenpbfapmcpcfhcoeohhnpob"><span class="i18n" data-message="BTDWebStore"></span></a></p>
+            <p><a href="https://twitter.com/BetterTDeck/">Better TweetDeck on Twitter</a></p>
             <p><a href="https://github.com/eramdam/BetterTweetDeck/issues"><span class="i18n" data-message="BugsSugs"></span></a></p>
             <p><a href="https://github.com/eramdam/BetterTweetDeck">GitHub</a></p>
-            <p><a href="http://erambert.me/en"><span class="i18n" data-message="AuthorWeb"></span></a></p>
-            <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9TXC4TVXGL6PJ"><span class="i18n" data-message="MakeADonation"></span></a></p>
+            <p><a href="http://erambert.me/"><span class="i18n" data-message="AuthorWeb"></span></a></p>
+            <p><a href="https://www.paypal.me/DErambert"><span class="i18n" data-message="MakeADonation"></span></a></p>
           </section>
         </div>
       </div>
@@ -265,7 +266,7 @@
         <div class="content">
           <section>
             <h3><span class="i18n" data-message="Author"></span></h3>
-            <p>Damien Erambert (<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9TXC4TVXGL6PJ"><span class="i18n" data-message="MakeADonation"></span></a>)</p>
+            <p>Damien Erambert (<a href="https://www.paypal.me/DErambert"><span class="i18n" data-message="MakeADonation"></span></a>)</p>
           </section>
           <section>
             <h3><span class="i18n" data-message="Contributors"></span></h3>
@@ -569,6 +570,8 @@
         <p><span class="i18n" data-message="onUpdateP1"></span></p>
         <p><span class="i18n" data-message="onUpdateP2"></span></p>
         <p><span class="i18n" data-message="onUpdateP3"></span></p>
+        <p>Better TweetDeck now has a <a href="https://twitter.com/BetterTDeck/">Twitter account</a>!</p>
+        <p>Better TweetDeck 3.0 is on the way. The release is planned around early/mid-2016, stay tuned on the Twitter account!</p>
       </div>
       <div class="action-area">
         <div class="action-area-right">
