commit your stuff, kids 	modified:   source/_locales/de/messages.json

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -257,7 +257,7 @@
             <p><a href="https://github.com/eramdam/BetterTweetDeck/issues"><span class="i18n" data-message="BugsSugs"></span></a></p>
             <p><a href="https://github.com/eramdam/BetterTweetDeck">GitHub</a></p>
             <p><a href="http://erambert.me/"><span class="i18n" data-message="AuthorWeb"></span></a></p>
-            <p><a href="https://www.paypal.me/DErambert"><span class="i18n" data-message="MakeADonation"></span></a></p>
+            <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted"><span class="i18n" data-message="MakeADonation"></span></a></p>
           </section>
         </div>
       </div>
@@ -266,7 +266,7 @@
         <div class="content">
           <section>
             <h3><span class="i18n" data-message="Author"></span></h3>
-            <p>Damien Erambert (<a href="https://www.paypal.me/DErambert"><span class="i18n" data-message="MakeADonation"></span></a>)</p>
+            <p>Damien Erambert (<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted"><span class="i18n" data-message="MakeADonation"></span></a>)</p>
           </section>
           <section>
             <h3><span class="i18n" data-message="Contributors"></span></h3>
