:wrench: make the view conversation stuff a setting

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -142,12 +142,18 @@
                 <span><span class="i18n" data-message="grayscaleIcons"></span></span>
               </label>
             </div>
-             <div class="checkbox">
-              <label>
-                <input type="checkbox" name="rtl_text_style">
-                <span><span class="i18n" data-message="rtl_detect_style"></span></span>
-              </label>
+           <div class="checkbox">
+            <label>
+              <input type="checkbox" name="rtl_text_style">
+              <span><span class="i18n" data-message="rtl_detect_style"></span></span>
+            </label>
             </div>
+            <div class="checkbox">
+             <label>
+               <input type="checkbox" name="hide_view_conversation">
+               <span>Hide "View conversation" and tweet actions in tweets (Related to 04/24/2016 TD update)</span>
+             </label>
+             </div>
           </section>
           <h2><span class="i18n" data-message="preview"></span></h2>
           <section>
