--- a/source/options/options.html
+++ b/source/options/options.html
@@ -151,8 +151,19 @@
             <div class="checkbox">
              <label>
                <input type="checkbox" name="hide_view_conversation">
-               <span>Hide "View conversation" and tweet actions in tweets (Related to 04/24/2016 TD update)</span>
+               <span>Hide "View conversation" link on tweets</span>
              </label>
+             <div class="checkbox">
+              <label>
+                <input type="checkbox" name="actions_on_hover">
+                <span>Show tweet actions only when hovering a tweet</span>
+              </label>
+             </div>
+             <div class="checkbox">
+              <label>
+                <input type="checkbox" name="actions_on_right">
+                <span>Put tweet actions on the right side</span>
+              </label>
              </div>
           </section>
           <h2><span class="i18n" data-message="preview"></span></h2>
