update to options v2 api in hope open_in_tab doesn't get depreq too fast

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -9,7 +9,7 @@
   <script src="options.js"></script>
 </head>
 <body class="chrome-bootstrap">
-  <div class="frame">
+  <div class="frame" style="min-width: 600px; min-height: 800px;">
     <div class="navigation">
       <h1>
         <a href=""><span class="i18n" data-message="Settings"></span></a>
