--- a/source/options/options.html
+++ b/source/options/options.html
@@ -165,6 +165,12 @@
                 <span>Put tweet actions on the right side</span>
               </label>
              </div>
+             <div class="checkbox">
+              <label>
+                <input type="checkbox" name="no_hearts">
+                <span>Put back stars instead of hearts (I CANNOT guarantee this setting to stay functional for ever)</span>
+              </label>
+             </div>
           </section>
           <h2><span class="i18n" data-message="preview"></span></h2>
           <section>
